# aaf

./: CMakeLists.txt  HOWTOBUILD.txt  README.TXT  ReleaseNotes.txt  unixaafsdk.mak  update.sh
Utilities/AafOmf/: AAFDomainUtils.cpp  AAFDomainUtils.h  Aaf2Omf.cpp  AafOmf.cpp  AafOmfMain.cpp  CMakeLists.txt  Omf2Aaf.cpp
Utilities/aafdump/: CMakeLists.txt
Utilities/eli2aaf/: CMakeLists.txt
examples/com-api/: CMakeLists.txt
examples/com-api/ComCutsOnlyTest/: CMakeLists.txt  CutsOnlyExample.cpp
examples/com-api/ComEssenceDataTest/: CMakeLists.txt
examples/com-api/ComExtension/: CMakeLists.txt  extensionUtils.cpp  extensionUtils.h
examples/com-api/ComPropDirectAccess/: CMakeLists.txt  propaccess.cpp
examples/com-api/ComPropDirectDump/: CMakeLists.txt
examples/com-api/DiagnosticOutputExample/: DiagnosticOutputExample.cpp
examples/com-api/ExportAS05Effects/: CMakeLists.txt
examples/com-api/ExportAudioExample/: CMakeLists.txt
examples/com-api/ExportDV/: CMakeLists.txt  ExportDV.cpp
examples/com-api/ExportJPEG/: CMakeLists.txt
examples/com-api/ExportPCM/: CMakeLists.txt
examples/com-api/ExportSimpleComposition/: CMakeLists.txt
examples/com-api/ExportVC3/: CMakeLists.txt
examples/com-api/ImportAudioExample/: CMakeLists.txt
examples/com-api/ImportDV/: CMakeLists.txt  ImportDV.cpp
examples/com-api/ImportJPEG/: CMakeLists.txt  ImportJPEG.cpp
examples/com-api/ImportPCM/: CMakeLists.txt  ImportPCM.cpp
examples/com-api/ImportVC3/: CMakeLists.txt  ImportVC3.cpp
examples/com-api/InfoDumper/: CMakeLists.txt  InfoDumper.cpp
examples/com-api/MetadataExample/: CMakeLists.txt
examples/com-api/comClientTest/: AAFInfo.cpp  CMakeLists.txt
examples2/axFileGen/: CMakeLists.txt  axFileGen.cpp
examples2/axLib/: AxMobSlot.h  CMakeLists.txt
meta/headergen/: CMakeLists.txt  headerGenUtils.cpp  headerGenUtils.h  install-headers.bash  make.cmd  make.sh  propertyDefUid.cpp  propertyId.cpp  storedObjectUid.cpp  typeDefUid.cpp
ref-impl/: CMakeLists.txt
ref-impl/aafiid/: CMakeLists.txt
ref-impl/aaflib/: CMakeLists.txt  aaflib.cpp
ref-impl/bld_cfg/: FreeBSD.mk
ref-impl/expat/: CMakeLists.txt
ref-impl/include/: AAFCOMPlatformTypes.h  AAFContainerDefs.h  AAFMetaDictionary.h  AAFMetaResult.h  AAFPlatform.h  AAFPluginDefs.h  AAFTypeDefUIDs.h
ref-impl/include/OM/: OMArrayProperty.h  OMArrayPropertyIterator.h  OMCachedDiskRawStorage.h  OMCachedRawStorage.h  OMClassDefinition.h  OMContainerElement.h  OMContainerProperty.h  OMDataContainerIterator.h  OMDataStream.h  OMDataStreamProperty.h  OMDataStreamPropertyFilter.h  OMDataTypes.h  OMDictionary.h  OMDiskRawStorage.h  OMEnumeratedType.h  OMGSF_SSStoredObjectFactory.h  OMKLVStoredObject.h  OMKLVStoredObjectFactory.h  OMKLVStoredStream.h  OMKLVStoredStreamFilter.h  OMListIterator.h  OMMS_SSStoredObjectFactory.h  OMMXFStorage.h  OMMXFStorageBase.h  OMMemoryRawStorage.h  OMObjectReference.h  OMObjectReferenceType.h  OMProperty.h  OMPropertySetIterator.h  OMRawStorage.h  OMRecordType.h  OMRedBlackTree.h  OMRedBlackTreeIterator.h  OMReferenceContainerIter.h  OMReferenceSet.h  OMReferenceSetIter.h  OMReferenceVectorIter.h  OMSSStoredObject.h  OMSSStoredObjectFactory.h  OMSSStoredStream.h  (+22 more)
ref-impl/include/com-api/: AAF.h  AAF.idl  AAFPlugin.h  AAFPlugin.idl  AAFPluginTypes.h  AAFPlugin_i.c  AAFPrivate.h  AAFPrivate.idl  AAFPrivate_i.c  AAFTypes.h  AAFTypes.idl  AAF_i.c
ref-impl/libjpeg/: CMakeLists.txt
ref-impl/plugins/: CAAFAIFCCodec.cpp  CAAFBasicInterp.cpp  CAAFCDCICodec.cpp  CAAFDNxHDCodec.cpp  CAAFEssenceDataStream.cpp  CAAFEssenceDataStream.h  CAAFEssenceFileContainer.cpp  CAAFEssenceFileContainer.h  CAAFEssenceRIFFWAVEContainer.cpp  CAAFEssenceRIFFWAVEContainer.h  CAAFJPEGCodec.cpp  CAAFPCMCodec.cpp  CAAFVC3Codec.cpp  CAAFWAVECodec.cpp  CMakeLists.txt
ref-impl/src/OM/: CMakeLists.txt  OMArrayPropertyIteratorT.h  OMArrayPropertyT.h  OMBufferedIStream.cpp  OMCachedDiskRawStorage.cpp  OMCachedRawStorage.cpp  OMContainerElement.cpp  OMContainerProperty.cpp  OMDataStreamProperty.cpp  OMDataStreamPropertyFilter.cpp  OMDictionary.cpp  OMDiskRawStorage.cpp  OMDynamicLibrary.cpp  OMFile.cpp  OMFile.h  OMGSFStructuredStorage.h  OMKLVStoredObject.cpp  OMKLVStoredObjectFactory.cpp  OMKLVStoredStream.cpp  OMKLVStoredStreamFilter.cpp  OMListIteratorT.h  OMListT.h  OMMSStructuredStorage.h  OMMXFStorage.cpp  OMMXFStorageBase.cpp  OMMemoryRawStorage.cpp  OMObjectReference.cpp  OMPortability.h  OMProperty.cpp  OMPropertySetIterator.cpp  OMRedBlackTreeT.h  OMReferenceSetIterT.h  OMReferenceVectorIterT.h  OMSSStoredObject.cpp  OMSSStoredObjectFactory.cpp  OMSSStoredStream.cpp  OMSSStructuredStorage.h  OMSS_SSStoredObjectFactory.cpp  OMSetPropertyIteratorT.h  OMSetPropertyT.h  (+31 more)
ref-impl/src/com-api/: AAFCLSIDs.h  AAFObjectTable.h  AAFObjectTable_i.cpp  CAAFAVCSubDescriptor.cpp  CAAFAVCSubDescriptor.h  CAAFAsyncStreamRawStorage.cpp  CAAFAsyncStreamRawStorage.h  CAAFAudioChannelLabelSubDescriptor.cpp  CAAFAudioChannelLabelSubDescriptor.h  CAAFBWFImportDescriptor.cpp  CAAFClassDef.cpp  CAAFCodecDef.cpp  CAAFCommentMarker.cpp  CAAFComponent.cpp  CAAFConstantValue.cpp  CAAFContentStorage.cpp  CAAFControlPoint.cpp  CAAFDataDef.cpp  CAAFDataDef.h  CAAFDescriptiveMarker.cpp  CAAFDictionary.cpp  CAAFEnumValidation.cpp  CAAFEnumValidation.h  CAAFEssenceAccess.cpp  CAAFEssenceData.cpp  CAAFEssenceDescriptor.cpp  CAAFEssenceDescriptor.h  CAAFEssenceGroup.cpp  CAAFFile.cpp  CAAFFile.h  CAAFFileDescriptor.cpp  CAAFFindSourceInfo.cpp  CAAFFindSourceInfo.h  CAAFGroupOfSoundfieldGroupsLabelSubDescriptor.cpp  CAAFGroupOfSoundfieldGroupsLabelSubDescriptor.h  CAAFHeader.cpp  CAAFHeader.h  CAAFIOCompletion.cpp  CAAFIOCompletion.h  CAAFJPEG2000SubDescriptor.cpp  (+100 more)
ref-impl/src/impl/: AAFClassIDs.h  AAFObjectModel.h  AAFObjectModelProcs.cpp  AAFUtils.cpp  AAFUtils.h  CMakeLists.txt  ImplAAFAVCSubDescriptor.cpp  ImplAAFAVCSubDescriptor.h  ImplAAFAsyncStreamRawStorage.cpp  ImplAAFAsyncStreamRawStorage.h  ImplAAFAudioChannelLabelSubDescriptor.cpp  ImplAAFAudioChannelLabelSubDescriptor.h  (+144 more)
test/: CMakeLists.txt
test/com/: CMakeLists.txt
(+266 files in other folders)
