add_subdirectory(comClientTest)
add_subdirectory(ComCutsOnlyTest)
add_subdirectory(ComEssenceDataTest)
add_subdirectory(ComExtension)
add_subdirectory(ComExtension/ComPersonnelExtension)
add_subdirectory(ComPropDirectAccess)
add_subdirectory(ComPropDirectDump)
add_subdirectory(ExportAS05Effects)
add_subdirectory(ExportAudioExample)
add_subdirectory(ExportDV)
add_subdirectory(ExportJPEG)
add_subdirectory(ExportPCM)
add_subdirectory(ExportSimpleComposition)
add_subdirectory(ExportVC3)
add_subdirectory(ImportAudioExample)
add_subdirectory(ImportDV)
add_subdirectory(ImportJPEG)
add_subdirectory(ImportPCM)
add_subdirectory(ImportVC3)
add_subdirectory(InfoDumper)
add_subdirectory(MetadataExample)
